2003-07-03  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXColor.c (GetControlPartColor): Use
	the ThemeBrushes to get the control text color for
	buttons.  
	
2003-07-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/tkUnixEvent.c (TkpCloseDisplay): Don't
	test for XCloseIM bug when the XFree86 version
	is newer than 4.0 since the layout of the
	XIM structure has changed. The check is not
	needed for newer XFree86 releases since
	the bug we are checking for was fixed in
	the 4.2.99.2 release. [Bug 755530]

2003-06-26  Vince Darley <vincentdarley@users.sourceforge.net>

	* library/menu.tcl: workaround problem on some Windows systems
        by trying to avoid posting a menu offscreen.

2003-06-09  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: fix for [Bug#751553] "Xft: 
	[font configure] does not update in-use fonts".
	Fixed TkpGetSubFonts() to return information about
	all subfonts, not just the first one.

2003-06-01  Joe English  <jenglish@users.sourceforge.net>

	* unix/configure.in: BUGFIX, --enable-xft test was broken.
	* unix/configure: regen

2003-05-31  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c (InitFont): Fill in TkFontAttributes from
	pattern returned from GetFont (actual font) instead of the 
	query pattern (requested font).

2003-05-31  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: New file 
	* unix/tkUnixDefault.h: Use different default fonts if HAVE_XFT
	* unix/Makefile.in:
	* unix/configure.in: Add --enable-xft flag
	* unix/configure: regen
	Experimental support for antialiased text under X11 [Patch#535541]

2003-05-30  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkMenu.c
	* generic/tkMenu.h
	* generic/tkMenuDraw.c: 
	* tests/menu.test: fixed complex bug in menu clone cleanup
	[Bug#465324] and removed 'knownBug' from a test.
	
2003-05-29  Joe English  <jenglish@users.sourceforge.net>

	* doc/text.n: Fixed markup errors.
